# model-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHIVE.md  CHANGELOG.md  DEVELOPMENT_SESSION_COMPLETE.md  DEVELOPMENT_SESSION_SUMMARY.md  DEVELOPMENT_SUMMARY.md  DOWNLOAD_SYSTEM_FIX.md  FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  SESSION_SUMMARY.txt  TEST_RESULTS.md  model_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_download.py  test_download_fixed.py  test_navigation.py  test_tui_download.py  verify.sh
.github/workflows/: ci.yml
src/: __init__.py  app.py  config.py  exceptions.py  models.py  theme.py
src/screens/: __init__.py  detail_screen.py  download_screen.py  help_screen.py  main_screen.py  search_screen.py
src/services/: __init__.py  cache_monitor.py  config_manager.py  download_history.py  download_queue.py  downloader.py  downloader_old.py  hf_client.py  storage.py  updater.py
src/utils/: __init__.py  helpers.py
src/widgets/: __init__.py  card.py  loading.py  modal.py  section_header.py  status_badge.py  styled_button.py
tests/: __init__.py  test_checksum.py  test_config_manager.py  test_download_history.py  test_download_queue.py  test_downloader.py  test_helpers.py  test_hf_client.py  test_integration.py  test_storage.py  test_updater.py
